--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div class="Logo">
-            <img src="MicrosoftTeams-image__27_-removebg-preview.png" alt="Logo">
+            <img src="././Assets/MicrosoftTeams-image__27_-removebg-preview.png" alt="Logo">
         </div>
         <div class="Nav_Buttons">
             <div class="Nav_Button1">
@@ -22,7 +22,7 @@
                 <button>Sign Up</button>
             </div>
             <div class="Brgr">
-                <img src="/hamburger-menu.webp" alt="" width="50">
+                <img src="./Assets/hamburger-menu.webp" alt="" width="50">
             </div>
         </div>
     </nav>
@@ -38,7 +38,7 @@
                         failure. The mind can't easily recognize that they are the same.</p>
                 </div>
                 <div class="layer1img">
-                    <img src="Group 16425.png" alt="img">
+                    <img src="./Assets/Group 16425.png" alt="img">
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <div class="Layer2">
         <div class="Layer2flex">
             <div class="l2img">
-                <img src="Group 16908.png" alt="img">
+                <img src="./Assets/Group 16908.png" alt="img">
             </div>
             <div class="l2text">
                 <p>This world of ours must avoid becoming a community of dreadful fear and hate, and be, instead, a
@@ -81,26 +81,7 @@
                     want
                     to contribute.</p>
             </div>
-            <!-- <div class="Layer3img">
-                <img src="Ellipse 34.png" alt="img">
-                <div class="l3zindex">
-                <div class="box1">
-                    <h1>$ 5M</h1>
-                    <p>Minutes of cumulative investors engagement</p>
-                </div>
-                <div class="box2">
-                    <h1>Business Engagement</h1>
-                </div>
-                <div class="box3">
-                    <h1>63</h1>
-                    <p>Questions asked</p>
-                </div>
-                <div class="box4">
-                    <h1>202</h1>
-                    <p>Minutes of Investment counseling & reviews</p>
-                </div>
-                </div>
-            </div> -->
+            
         </div>
     </div>
     <div class="Layer4">
@@ -115,12 +96,12 @@
                     <p>Invseted In</p>
                 </div>
                 <div class="b1sub-imgs">
-                    <img src="Component 324 – 1.png" alt="img">
-                    <img src="Component 325 – 1.png" alt="img">
-                    <img src="Component 323 – 1.png" alt="img">
+                    <img src="./Assets/Component 324 – 1.png" alt="img">
+                    <img src="./Assets/Component 325 – 1.png" alt="img">
+                    <img src="./Assets/Component 323 – 1.png" alt="img">
                 </div>
                 <div class="l4b1">
-                    <img src="Mask Group 5.png" alt="img">
+                    <img src="./Assets/Mask Group 5.png" alt="img">
                 </div>
             </div>
             <div class="l4b1border">
@@ -129,12 +110,12 @@
                     <p>Invseted In</p>
                 </div>
                 <div class="b1sub-imgs">
-                    <img src="Component 326 – 1.png" alt="img">
-                    <img src="Component 327 – 1.png" alt="img">
-                    <img src="Component 328 – 1.png" alt="img">
+                    <img src="./Assets/Component 326 – 1.png" alt="img">
+                    <img src="./Assets/Component 327 – 1.png" alt="img">
+                    <img src="./Assets/Component 328 – 1.png" alt="img">
                 </div>
                 <div class="l4b1">
-                    <img src="Mask Group 6.png" alt="img">
+                    <img src="./Assets/Mask Group 6.png" alt="img">
                 </div>
             </div>
             <div class="l4b1border">
@@ -143,12 +124,12 @@
                     <p>Invseted In</p>
                 </div>
                 <div class="b1sub-imgs">
-                    <img src="Component 329 – 1.png" alt="img">
-                    <img src="Component 331 – 1.png" alt="img">
-                    <img src="Component 332 – 1.png" alt="img">
+                    <img src="./Assets/Component 329 – 1.png" alt="img">
+                    <img src="./Assets/Component 331 – 1.png" alt="img">
+                    <img src="./Assets/Component 332 – 1.png" alt="img">
                 </div>
                 <div class="l4b1">
-                    <img src="Mask Group 7.png" alt="img">
+                    <img src="./Assets/Mask Group 7.png" alt="img">
                 </div>
             </div>
         </div>
@@ -163,28 +144,28 @@
         </div>
         <div class="Layer5imgs">
             <div class="l5img">
-                <img src="Mask Group 11.png" alt="img">
+                <img src="./Assets/Mask Group 11.png" alt="img">
                 <div class="l5cnt">
                     <h1>Norman Moss</h1>
                     <p>The Wing</p>
                 </div>
             </div>
             <div class="l5img">
-                <img src="Mask Group 10.png" alt="img">
+                <img src="./Assets/Mask Group 10.png" alt="img">
                 <div class="l5cnt">
                     <h1>Don Snider</h1>
                     <p>Fathom</p>
                 </div>
             </div>
             <div class="l5img">
-                <img src="Mask Group 9.png" alt="img">
+                <img src="./Assets/Mask Group 9.png" alt="img">
                 <div class="l5cnt">
                     <h1>Jasmine Tillery</h1>
                     <p>Brightline</p>
                 </div>
             </div>
             <div class="l5img">
-                <img src="Mask Group 8.png" alt="img">
+                <img src="./Assets/Mask Group 8.png" alt="img">
                 <div class="l5cnt">
                     <h1>Fred Gordon</h1>
                     <p>Lemonade</p>
@@ -199,7 +180,7 @@
         </div>
         <div class="l6flex">
             <div class="l6img">
-                <img src="Untitled design.png" alt="img">
+                <img src="./Assets/Untitled design.png" alt="img">
             </div>
             <div class="l6cnt">
                 <h1>Our process is simple.</h1>
@@ -216,19 +197,19 @@
         </div>
         <div class="l7imgs">
             <div class="img1">
-                <img src="Mask Group 21.png" alt="img">
+                <img src="./Assets/Mask Group 21.png" alt="img">
             </div>
             <div class="img2">
-                <img src="Mask Group 22.png" alt="img">
+                <img src="./Assets/Mask Group 22.png" alt="img">
             </div>
             <div class="img3">
-                <img src="Mask Group 23.png" alt="img">
+                <img src="./Assets/Mask Group 23.png" alt="img">
             </div>
             <div class="img4">
-                <img src="Mask Group 24.png" alt="img">
+                <img src="./Assets/Mask Group 24.png" alt="img">
             </div>
             <div class="img5">
-                <img src="Mask Group 25.png" alt="img">
+                <img src="./Assets/Mask Group 25.png" alt="img">
             </div>
 
         </div>
@@ -268,8 +249,8 @@
             </div>
         </div>
         <div class="arrow">
-            <img id="left" src="./free-right-arrow-icon-3094-thumb.png" alt="">
-            <img src="./free-right-arrow-icon-3094-thumb.png" alt="">
+            <img id="left" src="./Assets/./free-right-arrow-icon-3094-thumb.png" alt="">
+            <img src="./Assets/./free-right-arrow-icon-3094-thumb.png" alt="">
         </div>
     </div>
 
@@ -315,19 +296,19 @@
         <div class="l10flex">
             <div class="l10imgs">
                 <div class="l10img1">
-                    <img src="Mask Group 40.png" alt="img">
+                    <img src="./Assets/Mask Group 40.png" alt="img">
                 </div>
                 <div class="l10img2">
-                    <img src="Mask Group 41.png" alt="img">
+                    <img src="./Assets/Mask Group 41.png" alt="img">
                 </div>
                 <div class="l10img3">
-                    <img src="Mask Group 42.png" alt="img">
+                    <img src="./Assets/Mask Group 42.png" alt="img">
                 </div>
                 <div class="l10img4">
-                    <img src="Mask Group 43.png" alt="img">
+                    <img src="./Assets/Mask Group 43.png" alt="img">
                 </div>
                 <div class="l10img5">
-                    <img src="Mask Group 44.png" alt="img">
+                    <img src="./Assets/Mask Group 44.png" alt="img">
                 </div>
             </div>
         </div>
@@ -348,31 +329,31 @@
                 <div class="c1">
                     <p>What is the timing of the workshop?</p>
                     <div class="l11arrow">
-                        <img src="down.png" alt="img">
+                        <img src="./Assets/down.png" alt="img">
                     </div>
                 </div>
                 <div class="c1">
                     <p>Do we get recordings of the video's?</p>
                     <div class="l11arrow">
-                        <img src="down.png" alt="img">
+                        <img src="./Assets/down.png" alt="img">
                     </div>
                 </div>
                 <div class="c1">
                     <p>The session is live or pre-recorded?</p>
                     <div class="l11arrow">
-                        <img src="down.png" alt="img">
+                        <img src="./Assets/down.png" alt="img">
                     </div>
                 </div>
                 <div class="c1">
                     <p>How can I get a refund?</p>
                     <div class="l11arrow">
-                        <img src="down.png" alt="img">
+                        <img src="./Assets/down.png" alt="img">
                     </div>
                 </div>
                 <div class="c1">
                     <p>Do we get recordings of the video's?</p>
                     <div class="l11arrow">
-                        <img src="down.png" alt="img">
+                        <img src="./Assets/down.png" alt="img">
                     </div>
                 </div>
             </div>
@@ -386,7 +367,7 @@
         <div class="l12flex">
             <div class="l12bx">
                 <div class="b1img">
-                    <img src="Mask Group 66.png" alt="img">
+                    <img src="./Assets/Mask Group 66.png" alt="img">
                     <h4>Lorem ipsum dolor sit amet </h4>
                     <p>Lorem ipsumdolor sitamet, consectetuer adipiscing elit, seddiam ... <a href="">Read More</a></p>
                     <div class="bx-end">
@@ -395,7 +376,7 @@
                     </div>
                 </div>
                 <div class="b1img">
-                    <img src="Mask Group 65.png" alt="img">
+                    <img src="./Assets/Mask Group 65.png" alt="img">
                     <h4>Lorem ipsum dolor sit amet </h4>
                     <p>Lorem ipsumdolor sitamet, consectetuer adipiscing elit, seddiam ... <a href="">Read More</a></p>
                     <div class="bx-end">
@@ -404,7 +385,7 @@
                     </div>
                 </div>
                 <div class="b1img">
-                    <img src="Mask Group 64.png" alt="img">
+                    <img src="./Assets/Mask Group 64.png" alt="img">
                     <h4>Lorem ipsum dolor sit amet </h4>
                     <p>Lorem ipsumdolor sitamet, consectetuer adipiscing elit, seddiam ... <a href="">Read More</a></p>
                     <div class="bx-end">
@@ -437,15 +418,15 @@
                 <h2>Get in Touch</h2>
                 <div class="fp3flex">
                     <div class="l13imgs">
-                        <img src="Icon simple-webpack.png" alt="img">
+                        <img src="./Assets/Icon simple-webpack.png" alt="img">
                         <p>todaywebuikit.com</p>
                     </div>
                     <div class="l13imgs">
-                        <img src="Icon zocial-email.png" alt="img">
+                        <img src="./Assets/Icon zocial-email.png" alt="img">
                         <p>hello@gmail.com</p>
                     </div>
                     <div class="l13imgs">
-                        <img src="Icon awesome-phone-square-alt.png" alt="img">
+                        <img src="./Assets/Icon awesome-phone-square-alt.png" alt="img">
                         <p>+377 8832 9903</p>
                     </div>
                 </div>
@@ -455,7 +436,7 @@
             </div>
             <div class="fp5">
                 <h2>Terms & Conditions</h2>
-                <img src="Group 31.png" alt="img">
+                <img src="./Assets/Group 31.png" alt="img">
             </div>
         </div>
     </div>
